feat: Ajout sous-titres, crédits et Localization.json
Refs: #2 #3

--- a/main/games/Everyday/Credits.html
+++ b/main/games/Everyday/Credits.html
@@ -1,10 +1,7 @@
 <font color='#ff7d00'>TRADUCTEURS</font>
-Alexis#1588
-MisterShaokahn#0765
-PachatFR#8346
-
-<font color='#ff7d00'>VOIX FRANÇAISE</font>
-Alexis#1588
+Alexis
+MisterShaokahn
+PachatFR
 
 <font color='#ff7d00'>JACKBOX GAMES</font>
 
